# ez-stemz

./: .env.release.example  .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml
Resources/: EZStemz.entitlements
Source/: AppConfig.cpp  AppConfig.h  AppPluginRegistry.cpp  AppPluginRegistry.h  LocalSeparator.cpp  LocalSeparator.h  Main.cpp  MainComponent.cpp  MainComponent.h  MixdownExporter.cpp  MixdownExporter.h  MixerWindow.cpp  MixerWindow.h  MultitrackPlayer.cpp  MultitrackPlayer.h  PluginPickerWindow.cpp  PluginPickerWindow.h  Project.h  ProjectsLibrary.cpp  ProjectsLibrary.h  ProjectsListComponent.cpp  ProjectsListComponent.h  SeparationService.cpp  SeparationService.h  SongProcessorComponent.cpp  SongProcessorComponent.h  TrackStripComponent.cpp  TrackStripComponent.h  TransportBar.cpp  TransportBar.h
scripts/: dev  release
windows/: installer.nsi
